<resources>
    <string name="app_name">App1</string>
    <string name="action_settings">Settings</string>
    <string name="awesome_super_math_game">Awesome super math game</string>
    <string name="press_to_start">Press to Start</string>
    <string name="score">Score</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="answer">Answer</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="difficulty">Difficulty</string>
    <string name="confirm_answer">Confirm Answer</string>
    <string name="easy">Easy</string>
    <string name="med">Med</string>
    <string name="hard">Hard</string>
    <string name="easyy">Easy</string>
    <string name="medium">medium</string>
    <string name="back">Back</string>
    <string name="easyscore">EasyScore</string>
    <string name="highscore">Highscore</string>
    <string name="hardscore">hardScore</string>
    <string name="mediumscore">mediumScore</string>
    <string name="infotext">infotext</string>
    <string name="modellname">modellname</string>
    <string name="music">Music</string>
    <string name="music_off">Music Off</string>
    <string name="music_on">Music On</string>
    <string name="hard_score">Hard score</string>
    <string name="easy_score">Easy score</string>
    <string name="medium_score">Medium score</string>
    <string name="textvieww">TextView</string>
</resources>
